@startuml Expressions
skinparam style strictuml
skinparam monochrome true


interface ASTNode {
    getLine(): int
    getColumn(): int
    accept<R, P>(AbstractVisitor<R, P> visitor, ParamType p): R
}

interface Expression {
    getType(): Type
    setType(Type type): void
    isLValue(): boolean
}

abstract AbstractExpression implements Expression {
    type: Type
}

class IntLiteral {
    value: int
}

class DoubleLiteral {
    value: double
}

class CharLiteral {
    character: char
}

class Variable {
    name: String
    definition: Definition
}

class AritmeticOperation {
    operator: String
    leftExpression: Expression
    rightExpression: Expression
    ' Deben de poder ser evaluables
}

class LogicalOperation extends AbstractExpression {
    operation: String
    leftExpression: Expression
    rightExpression: Expression
'    En este caso deben de ser enteron para poder funcionar
}

class ComparisonOperation extends AbstractExpression {
    operation: String
    leftExpression: Expression
    rightExpression: Expression
}

class Invocation extends AbstractExpression implements Statement {
    argumentos: List<Expression>
}

class Cast {
    castType: Type
    exp: Expression
}

class ArrayAccess extends AbstractExpression {
    array: Expression
    index: Expression
}

class FieldAccess extends AbstractExpression {
    field: String
    exp: Expression
}

class UnaryMinus extends AbstractExpression {
    exp: Expression
}

class Negation extends AbstractExpression {
    exp: Expression
}


ASTNode <|-- Expression
AbstractExpression <|-- IntLiteral
AbstractExpression <|-- DoubleLiteral
AbstractExpression <|-- CharLiteral
AbstractExpression <|-- Variable
AbstractExpression <|-- AritmeticOperation
AritmeticOperation o-- "2" Expression
LogicalOperation o-- "2" Expression
ComparisonOperation o-- "2" Expression
Negation o-- "1" Expression
UnaryMinus o-- "1" Expression
Cast o-- "1" Expression
FieldAccess o-- "1" Expression
Invocation o-- "0..*" Expression
ArrayAccess o-- "2" Expression
AbstractExpression <|-- Cast

' TIPS: Not needed to define class in PlantUML to make a diagram
Variable o-- "1" Definition
Cast o-- "1" Type

@enduml
